mainnet.gno.land/extracted/r/moul/x/daily/blog/v0/README.md
# Personal Blog

> ⚠️ **Experimental — generated with no human supervision.** This realm was
> produced automatically by an MCP-driven agent to exercise the gno MCP server
> and tooling, and to generate test content for gno compilers, linters and
> formatters. **Not audited. Not for production.** Full context & folder README:
> [r/moul/x/daily](https://github.com/moul/gno-contracts/blob/main/r/moul/x/daily/README.md)

---


A multi-author on-chain blog realm for gno.land. Anyone can publish a post; each
post records its author (the calling address) and the block height at which it
was published. Posts are stored persistently and rendered newest-first, with a
dedicated page for each post's full text.

**Realm path:** `gno.land/r/REPLACE_ADDR/blog`

## Example calls

Publish a post (state-mutating, crossing function):

```
gnokey maketx call -pkgpath "gno.land/r/REPLACE_ADDR/blog" \
  -func Publish -args "My first post" -args "Hello, gno.land!" \
  -gas-fee 1000000ugnot -gas-wanted 2000000 -broadcast -chainid sapphire-1 KEY
```

Read views (no transaction needed):

- Root — list all posts, newest first: render `gno.land/r/REPLACE_ADDR/blog`
- Single post by id: render `gno.land/r/REPLACE_ADDR/blog:/0`

`PostCount()` returns the total number of published posts.

<!-- BEGIN GNOCONTRACTS FOOTER (generated by `make readmes`; do not edit below) -->

---

Part of **[moul/gno-contracts](https://github.com/moul/gno-contracts)** — moul's versioned gno.land contracts. See the repository for the full catalog, build/test tooling, and usage.

**Dependency graph:**

![gno.land/r/moul/x/daily/blog/v0 dependency graph](https://raw.githubusercontent.com/moul/gno-contracts/main/_assets/gno.land/r/moul/x/daily/blog/v0/deps.png)

> 🧪 **Highly experimental — potentially vibe-coded.** Not audited; may break, change, or be removed at any time. Do not use with anything of value. Full disclaimer: [DISCLAIMER](https://github.com/moul/gno-contracts/blob/main/DISCLAIMER.md).

<!-- END GNOCONTRACTS FOOTER -->
